--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -270,7 +270,7 @@ a.edit-button {
         content: "WELCOME TO AMC";
         opacity: 0;
         font-weight: 700;
-        font-size: 18px;
+        
         position: relative;
     }
 
@@ -278,8 +278,29 @@ a.edit-button {
         content: "WELCOME TO AMC";
         opacity: 1;
         font-weight: 700;
-        font-size: 18px;
+        
         position: relative;
+    }
+}
+
+@media (max-width:675px)
+{
+    @keyframes animate {
+        0% {
+            content: "WELCOME TO AMC";
+            opacity: 0;
+            font-weight: 700;
+            font-size: 18px;
+            position: relative;
+        }
+    
+        100% {
+            content: "WELCOME TO AMC";
+            opacity: 1;
+            font-weight: 700;
+            font-size: 18px;
+            position: relative;
+        }
     }
 }
 
